fixed contrast for real this time

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
-  color: rgba(245, 245, 245, 0.671);
-  margin: 0;
+  background-color: black;
+  color: rgba(255, 255, 255, 0.685);
 }
 
 h1 {
@@ -39,5 +39,5 @@ h1 {
   font-size: 1.15rem;
   font-weight: bolder;
   font-family: monospace;
-  color: red;
+  color: #ff0000;
 }
